--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,22 @@
         android:theme="@style/AppTheme" >
 
         <activity
+            android:name=".LoginActivity"
+            android:label="@string/app_name" />
+
+        <activity
+            android:name=".SignUpActivity"
+            android:label="@string/app_name" />
+
+        <activity
+            android:name=".EggListActivity"
+            android:label="@string/app_name" />
+
+        <activity
+            android:name=".UserListActivity"
+            android:label="@string/app_name" />
+
+        <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
