--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
             android:label="@string/app_name" />
 
         <activity
+            android:name=".EggActivity"
+            android:label="@string/app_name" />
+
+        <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
