--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,10 @@
 
         <activity
             android:name=".MainActivity"
+            android:label="@string/app_name" />
+
+        <activity
+            android:name=".ModeActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
