--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
     <application
         android:name=".WinnipegTrailsApplication"
         android:allowBackup="true"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name" >
 
         <activity
             android:name=".LoginActivity"
@@ -32,19 +31,23 @@
 
         <activity
             android:name=".UserListActivity"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:theme="@style/ActionBar" />
 
         <activity
             android:name=".EggActivity"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" />
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" />
 
         <activity
             android:name=".ModeActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
