--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
     <application
         android:name=".WinnipegTrailsApplication"
         android:allowBackup="true"
+        android:icon="@mipmap/wta"
         android:label="@string/app_name" >
 
         <activity
