--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
         android:label="@string/app_name" >
 
         <activity
+            android:name=".WebViewActivity"
+            android:label="@string/app_name"
+            android:theme="@style/ActionBar" />
+
+        <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/ActionBar" />
