--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -19,11 +20,6 @@
         android:label="@string/app_name" >
 
         <activity
-            android:name=".WebViewActivity"
-            android:label="@string/app_name"
-            android:theme="@style/ActionBar" />
-
-        <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/ActionBar" />
@@ -32,6 +28,12 @@
             android:name=".SignUpActivity"
             android:label="@string/app_name"
             android:theme="@style/ActionBar" />
+
+        <activity
+            android:name=".WebViewActivity"
+            android:label="@string/app_name"
+            android:theme="@style/ActionBar"
+            android:parentActivityName="ca.winnipegtrails.winnipegtrails.SettingsActivity" />
 
         <activity
             android:name=".EggListActivity"
