--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,14 +20,16 @@
         android:label="@string/app_name" >
 
         <activity
-            android:name=".LoginActivity"
-            android:label="@string/app_name"
-            android:theme="@style/ActionBar" />
-
-        <activity
             android:name=".SignUpActivity"
             android:label="@string/app_name"
-            android:theme="@style/ActionBar" />
+            android:theme="@style/ActionBar"
+            android:parentActivityName="ca.winnipegtrails.winnipegtrails.LoginActivity" />
+
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/app_name"
+            android:theme="@style/ActionBar"
+            android:parentActivityName="ca.winnipegtrails.winnipegtrails.SettingsActivity" />
 
         <activity
             android:name=".WebViewActivity"
