--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,7 +67,8 @@
 
         <activity
             android:name=".VideoActivity"
-            android:theme="@style/NoActionBar" >
+            android:theme="@style/NoActionBar"
+            android:launchMode="singleTask" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
