--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,32 +22,47 @@
         <activity
             android:name=".SignUpActivity"
             android:label="@string/app_name"
-            android:theme="@style/ActionBar"
-            android:parentActivityName="ca.winnipegtrails.winnipegtrails.LoginActivity" />
+            android:theme="@style/ActionBar" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ca.winnipegtrails.winnipegtrails.LoginActivity" />
+        </activity>
 
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
-            android:theme="@style/ActionBar"
-            android:parentActivityName="ca.winnipegtrails.winnipegtrails.SettingsActivity" />
+            android:theme="@style/ActionBar" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ca.winnipegtrails.winnipegtrails.SettingsActivity" />
+        </activity>
 
         <activity
             android:name=".WebViewActivity"
             android:label="@string/app_name"
-            android:theme="@style/ActionBar"
-            android:parentActivityName="ca.winnipegtrails.winnipegtrails.SettingsActivity" />
+            android:theme="@style/ActionBar" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ca.winnipegtrails.winnipegtrails.SettingsActivity" />
+        </activity>
 
         <activity
             android:name=".EggListActivity"
             android:label="@string/gems"
-            android:theme="@style/ActionBar"
-            android:parentActivityName="ca.winnipegtrails.winnipegtrails.SettingsActivity" />
+            android:theme="@style/ActionBar" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ca.winnipegtrails.winnipegtrails.SettingsActivity" />
+        </activity>
 
         <activity
             android:name=".UserListActivity"
             android:label="@string/leaderboard"
-            android:theme="@style/ActionBar"
-            android:parentActivityName="ca.winnipegtrails.winnipegtrails.SettingsActivity" />
+            android:theme="@style/ActionBar" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ca.winnipegtrails.winnipegtrails.SettingsActivity" />
+        </activity>
 
         <activity
             android:name=".EggActivity"
